[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/spawner_tilemap/editor/tile_to_scene_editor.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.113725, 0.133333, 0.176471, 1 )

[node name="WindowDialog" type="WindowDialog"]
visible = true
margin_right = 475.0
margin_bottom = 500.0
rect_min_size = Vector2( 475, 500 )
focus_mode = 1
window_title = "Tile to Scene Editor"
resizable = true
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 465.0
margin_bottom = 490.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="SearchBar" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_right = 455.0
margin_bottom = 24.0
placeholder_text = "Scene id or name to search ..."

[node name="SearchButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 455.0
margin_bottom = 48.0
alignment = 1

[node name="ClearButton" type="Button" parent="MarginContainer/VBoxContainer/SearchButtons"]
margin_left = 176.0
margin_right = 220.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Clear"

[node name="SearchButton" type="Button" parent="MarginContainer/VBoxContainer/SearchButtons"]
margin_left = 224.0
margin_right = 278.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Search"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 455.0
margin_bottom = 485.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 454.0
margin_bottom = 432.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[connection signal="pressed" from="MarginContainer/VBoxContainer/SearchButtons/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SearchButtons/SearchButton" to="." method="_on_SearchButton_pressed"]
